@@ -119,3 +119,4 @@ Release 1.5
 * Bug Fixing 1977581 [ERDesignerNG] grid related minor issues
 * Bug Fixing 1978355 [ERDesignerNG] string default values on MySQL
 * Bug Fixing 2070251 [ERDesignerNG] Lack of primary key causes exception
+* Applied patch 2124875 [ERDesignerNG] Add Postgres data types
